--- a/Owen013.TeenyHatchling/manifest.json
+++ b/Owen013.TeenyHatchling/manifest.json
@@ -1,8 +1,8 @@
 {
   "filename": "TeenyHatchling.dll",
   "author": "Owen_013",
-  "name": "Teeny Hatchling",
+  "name": "Smol Hatchling",
   "uniqueName": "Owen013.TeenyHatchling",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "owmlVersion": "2.1.0"
 }
