--- a/Owen013.TeenyHatchling/manifest.json
+++ b/Owen013.TeenyHatchling/manifest.json
@@ -1,7 +1,7 @@
 {
   "filename": "TeenyHatchling.dll",
   "author": "Owen_013",
-  "name": "Smol Hatchling",
+  "name": "Teeny Hatchling",
   "uniqueName": "Owen013.TeenyHatchling",
   "version": "0.0.2",
   "owmlVersion": "2.1.0"
