--- a/Owen013.TeenyHatchling/default-config.json
+++ b/Owen013.TeenyHatchling/default-config.json
@@ -1,7 +1,7 @@
 {
 	"enabled": true,
 	"settings": {
-		"Enable Smol Hatchling": true,
-		"High Pitched SFX when Small": true
+		"Size Multiplier": 0.66,
+		"Change Pitch Depending on Height": true
 	}
 }
