--- a/Owen013.TeenyHatchling/SmolHatchling.csproj
+++ b/Owen013.TeenyHatchling/SmolHatchling.csproj
@@ -3,8 +3,8 @@
     <ProjectGuid>{8A39F9E7-1A89-430C-9C3E-BDFB3B7E17DF}</ProjectGuid>
     <TargetFramework>net48</TargetFramework>
     <OutputPath>Build</OutputPath>
-    <AssemblyTitle>Owen013.TeenyHatchling</AssemblyTitle>
-    <Product>Owen013.TeenyHatchling</Product>
+    <AssemblyTitle>Owen013.SmolHatchling</AssemblyTitle>
+    <Product>Owen013.SmolHatchling</Product>
     <Copyright>Copyright ©  2020</Copyright>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
@@ -24,7 +24,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TeenyHatchling.csproj.user" />
+    <Content Include="SmolHatchling.csproj.user" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="OuterWildsGameLibs" Version="1.1.12.125" />
