New story mode beta! Download and build source files to try it out!

--- a/Owen013.TeenyHatchling/default-config.json
+++ b/Owen013.TeenyHatchling/default-config.json
@@ -2,7 +2,8 @@
 	"enabled": true,
 	"settings": {
 		"Height (Default 1)": 0.5,
-		"Radius (Default 1)": 1,
-		"Change Pitch Depending on Height": true
+		"Radius (Default 1)": 0.75,
+		"Change Pitch Depending on Height": true,
+		"Enable Story": true
 	}
 }
