--- a/Owen013.TeenyHatchling/SmolHatchling.csproj
+++ b/Owen013.TeenyHatchling/SmolHatchling.csproj
@@ -22,6 +22,9 @@
     <None Include="manifest.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="Assets\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="SmolHatchling.csproj.user" />
