--- a/Owen013.TeenyHatchling/default-config.json
+++ b/Owen013.TeenyHatchling/default-config.json
@@ -3,6 +3,7 @@
 	"settings": {
 		"Height (Default 1)": 0.5,
 		"Radius (Default 1)": 0.75,
-		"Change Pitch Depending on Height": true
+		"Change Pitch Depending on Height": true,
+		"Enable Story": false
 	}
 }
